1 endpoint for Create-Update Vehicle and Vehicle Assignment
1 endpoint for Create-Update Vehicle and Vehicle Assignment
